2004-09-29  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* agent.adb:
	Allow back output the headers and the message body with an HTTPS URL.
	Do not make HTTP_Connection for method GET and Follow_Redirection.

2004-09-25  Pascal Obry  <pascal@obry.org>

	* agent.adb:
	With an HTTPS URL do not try to output the headers or the message body.
	Minor reformatting.

	* demos.gpr:
	(Compiler): Remove option -m (there is no such option on
	 gcc). This could be used in a Builder package.

2004-09-16  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* runme_cb.adb, ws_cb.adb:
	Change case of Something_ID to Something_Id.

2004-09-15  Pascal Obry  <pascal@obry.org>

	* makefile:
	Removes last -lpoll occurence. Not needed now as the -lpoll is
	 automatically added with a pragma Linker_Options in
	 AWS.Os_Lib.Definitions.

	* demos.gpr:
	Do not use "null;" as it is not support on GNAT 5.02.

2004-09-15  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* makefile:
	Remove -lpoll linker option for Win32.

2004-08-11  Pascal Obry  <pascal@obry.org>

	* demos.gpr:
	Add missing value in case statement to avoid warnings.

2004-06-01  Pascal Obry  <pascal@obry.org>

	* hotplug_module.ini:
	Initial revision.

	* main.adb:
	New version based on new secure hotplug module.
	Update copyright notice.

	* hotplug.adb:
	New version based on new secure hotplug module.
	Update copyright notice.

	* auth_cb.adb:
	Convert Authorization_Nonce to Digest.Nonce.
	Update copyright notice.

2004-04-14  Pascal Obry  <p.obry@wanadoo.fr>

	* makefile:
	(BUILD_EXT): New variable. Set to build_wsdl only if XMLADA is set.
	(gbuild): Use $(BUILD_EXT).

2004-04-06  Pascal Obry  <p.obry@wanadoo.fr>

	* demos.gpr:
	(COFF_Ref): Fix aws.coff file directory.
	(WIN_OPT): Fix syntax.
	Add -lpoll for all demos.

2004-04-06  Pascal Obry  <pascal@obry.org>

	* demos.gpr:
	(WIN_OPT): Add -lpoll.

2004-04-06  Pascal Obry  <pascal@obry.org>

	* demos.gpr:
	(Main): Add web_mail.adb.

	* wm_summary.thtml:
	Add summary link.